# k4RecTracker

./: .gitignore  CMakeLists.txt  README.md  SteeringFile_IDEA_o1_v03.py  Zcard.cmd  gun.cpp  gun_random_angle.cpp  model_check.py  muons_eta0017_mom10.gun  runIDEAcomplete.py  runIDEAdigitizer.py  runIDEAdigitizer_DC.py  runIDEAdigitizer_vertex.py  runIDEAefficiency.py  runIDEAtracker.py  runIDEAtrackerDigitizer.py  runIDEAtracker_check.py  runIDEAtracker_eval.py  runIDEAtracking_eff.py  runIDEAtracking_eff_gun.py  runIDEAtracking_eff_pythia.py  runIDEAv3TrackerDigitizer.py  run_simulation.sh  setup.sh
ARCdigi/: CMakeLists.txt
DCHdigi/: CMakeLists.txt
DCHdigi/dataFormatExtension/: driftChamberHit.yaml
Tracking/: CMakeLists.txt  README.md
Tracking/components/: GGTFTrackFinder.cpp  GGTF_tracking.cpp  GGTF_tracking_OC.cpp  GGTF_tracking_OC_IDEA_o1_v3.cpp  GGTF_tracking_OC_weiver.cpp  GenfitTrackFitter copy.cpp  GenfitTrackFitter.cpp  GenfitTrackFitter_old.cpp  GenfitTrackFitter_v2.cpp  IDEATracksFromGenParticles.cpp  PerfectTrackFinder.cpp  PerfectTracking.cpp  TracksFromGenParticles.cpp  edm4hepTrack_to_extensionTrack.cpp  testing.cpp
Tracking/components/old/: DC_measurement.cpp  DC_measurement.hpp  DetectorCheckSum.cpp  FitterWithRoot.cpp  FitterWithRootVariant.cpp  FitterWithXML.cpp  IDEA_fitter_validation.cpp  IDEAtrack.cpp  IDEAtrack.hpp  SI_measurement.cpp  SI_measurement.hpp  TrackFitter_Genfit.cpp  comparisonXML_ROOT.cpp
Tracking/include/: DetectorChecksum.hpp  Evaluation_efficiency.h  FastCircleSeed.hpp  GGTF_tracking_dbscan_alg.hpp  GGTF_tracking_dbscan_eval.hpp  GenFitter_evaluation_dbscan.h  WeaverInterface.hpp  dbscan.hpp  utils.h  utils.hpp
Tracking/include/genfit_interfaces/: DC_measurement.hpp  GenfitField.hpp  GenfitMaterialInterface.hpp  GenfitTrack.h  GenfitTrack.hpp  GenfitWireMeasurement.hpp  IDEAtrack.hpp  IDEAtrackFitter.hpp  Planar_measurement.hpp  VTX_measurement.hpp  Wire_measurement.hpp  customWireHit.hpp
Tracking/include/genfit_interfaces/CLD/: CLDtrack.hpp
Tracking/include/genfit_interfaces/cepc/: GenfitHit.hpp  GenfitTrack.hpp  GenfitUnit.hpp  Genfitter.hpp  PlanarMeasurement.hpp  WireMeasurementDC.hpp
Tracking/include/measurement/: DC_measurement.hpp  VTX_measurement.hpp
Tracking/src/: CLD_fitter.cpp  CLD_fitter_validation.cpp  DC_measurement.cpp  DetectorChecksum.cpp  Evaluation_efficiency.cpp  GGTF_check_track.cpp  GGTF_efficiency.cpp  GGTF_fitter.cpp  GGTF_fitter_IDEAv3.cpp  GGTF_performance_IDEAv2.cpp  GGTF_tracking.cpp  GGTF_tracking_OC_IDEAv2.cpp  GGTF_tracking_OC_IDEAv3.cpp  GGTF_tracking_dbscan.cpp  GGTF_tracking_dbscan_IDEAv3.cpp  GGTF_tracking_dbscan_IDEAv3_v1.cpp  GGTF_tracking_dbscan_alg.cpp  GGTF_tracking_dbscan_check.cpp  GGTF_tracking_dbscan_eval.cpp  GGTF_tracking_dbscan_noSim.cpp  GGTF_tracking_dbscan_temp.cpp  GenFitter_evaluation_dbscan.cpp  IDEA_fitter_validation.cpp  ONNXRuntime.cpp  WeaverInterface.cpp  checkGeometry.cpp  dbscan.cpp  efficency_functional_pythia.cpp  efficiency_functional_gun.cpp  tracking_functional.cpp  utils.cpp
Tracking/src/genfit_interfaces/: DC_measurement.cpp  GenfitField.cpp  GenfitMaterialInterface.cpp  GenfitPlanarMeasurement.cpp  GenfitTrack.cpp  GenfitTrack_old.cpp  GenfitWireMeasurement.cpp  IDEAtrack.cpp  IDEAtrackFitter.cpp  Planar_measurement.cpp  SI_measurement.cpp  VTX_measurement.cpp  Wire_measurement.cpp  customWireHit.cpp
Tracking/src/genfit_interfaces/CLD/: CLDtrack.cpp
Tracking/src/genfit_interfaces/cepc/: GenfitHit.cpp  Genfitter.cpp  PlanarMeasurement.cpp  WireMeasurementDC.cpp
Tracking/src/measurement/: VTX_measurement.cpp
Tracking/test/inputFiles/: GatrIDEAv3o1WithWrapper.onnx.md5
Tracking/test/testFitter/: runGenfitFitterPipeline.py  sim_steering.py  test_GenfitFitter.sh
Tracking/test/testTrackFinder/: SteeringFile_IDEA_o1_v03.py  runTestTrackFinder.py  test_trackFinder.sh
Tracking/test/testTrackFitter/: runTestTrackFitter.py  test_trackFitter.sh
VTXdigi/include/: VTXdigitizer_IDEAv2.h
VTXdigi/src/: VTXdigitizer_IDEAv2.cpp
Vertexing/: CMakeLists.txt  README.md
Vertexing/components/: LeastSquaresVertexFitter.cpp
Vertexing/include/: LinearizedHelixVertexFitter.h
Vertexing/src/: LinearizedHelixVertexFitter.cpp
Vertexing/test/testLeastSquaresVertexFitter/: out_sim_edm4hep.root  out_vertexing.root  runVertexFitter.py  test_vertexFitter.sh
